# fuel-octane

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  Gemfile  HACKING.rst  MAINTAINERS  MANIFEST.in  README.md  README.rst  Rakefile  bindep.txt  openstack-common.conf  other-requirement.txt  other-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  upper-constraints.txt  Ж
.ropeproject/: globalnames
deploy/: fuel.xml  libvirt-qemu-hook.py  libvirt.patch  net_reconfigure.sh  node.xml  preseed.cfg  setup_node.sh  snapshot_fns  ssh_key  ssh_key.pub
deployment/puppet/octane_tasks/: README.md  Rakefile
deployment/puppet/octane_tasks/examples/: db_sync.pp  rsync_octane_section.pp  start_controller_services.pp  upgrade-db-orig.yaml  upgrade-db-seed-rollback.yaml  upgrade-db-seed.yaml
deployment/puppet/octane_tasks/files/: delete_section.py  fetch_puppet_resource_param.sh  neutron_migrations_for_fuel_8  store_current_host.sh  store_new_host.sh
deployment/puppet/octane_tasks/graphs/: upgrade-ceph-orig.yaml  upgrade-ceph-seed.yaml  upgrade-db-orig-rollback.yaml  upgrade-db-orig.yaml  upgrade-db-seed.yaml
deployment/puppet/octane_tasks/manifests/: ceph_bootstrap.pp  ceph_mon_dump_create.pp  ceph_mon_start.pp  ceph_mon_stop.pp  ceph_reconfiguration.pp  dbsync.pp  kill_cluster.pp  maintenance.pp  migrate_flavor_data_70.pp  mysqldump_create.pp  mysqldump_restore.pp  neutron_migrations_for_fuel_8.pp  params.pp  preupgrade_compute.pp  restart_ceph_osd.pp  rsync_octane_section.pp  set_noout.pp  start_cluster.pp  stop_compute_services.pp  unset_noout.pp  upgrade_ceph_packages.pp
doc/: README.md
doc/source/: conf.py  index.rst  installation.rst  usage.rst
docs/records/: cloud_70_91_upgrade.json  fuel_master_70_80.json  fuel_master_80_90.json  fuel_master_91_mu.json
misc/: all-in-one.sh
misc/rpmbuild/: build_rpm.sh  octane.spec
octane/: 1.py  __init__.py  app.py  environment.py  log.py  magic_consts.py
octane/commands/: backup.py  check.py  check_sudo.py  cleanup.py  enable_release.py  install_node.py  osd_upgrade.py  patch_active_image.py  prepare.py  preupgrade_compute.py  repo_backup.py  repo_restore.py  restore.py  rollback_controlplane.py  sync_images.py  sync_networks.py  update_bootstrap.py  update_plugin_settings.py  upgrade_ceph.py  upgrade_compute.py  upgrade_controlplane.py  upgrade_db.py  upgrade_env.py  upgrade_node.py  upgrade_plugin.py  upgrade_plugins.py  upgrade_release.py
octane/docker/: cobbler
octane/docker/astute/: Dockerfile
octane/docker/cobbler/: Dockerfile
octane/docker/nailgun/: Dockerfile
octane/fuelclient/: clone_env.py  clone_ips.py  clone_release.py  copy_vips.py  create_release.py  move_node.py  objects.py
octane/handlers/: __init__.py
octane/handlers/backup_restore/: __init__.py  actions.py  admin_network.py  admin_networks.py  astute.py  base.py  cobbler.py  exceptions.py  fuel_keys.py  fuel_uuid.py  logs.py  mcollective.py  mirrors.py  nailgun_plugins.py  nginx.py  password.py  postgres.py  puppet.py  release.py  ssh.py  version.py
octane/handlers/check/: __init__.py
octane/handlers/install/: __init__.py  cinder.py  compute.py
octane/handlers/upgrade/: __init__.py  ceph_osd.py  cinder.py  compute.py  controller.py  mongo.py
octane/helpers/: clean_env.py  cluster.py  copy_ifaces.py  copy_ips_in_deploy_info.py  delete_fuel_resources.py  disk.py  docker_patch.py  host_evacuation.sh  join-jsons.py  network.py  node_attributes.py  sync_glance_images.py  tasks.py  transformations.py
octane/lib/: ceph.sh  db.sh  docker.sh  functions.sh  maintenance.sh  nailgundb.sh  patch  patch.sh  revert.sh  utils.sh
octane/patches/: controller.pp.patch  icehouse-juno-compat-for-new-controllers.patch  nailgun-clone-ips.patch  nailgun_serializer.patch  neutron-template.tar  neutron-upgrade.patch  nova.conf  nova.patch  timeout.patch  update_node_partition_info.py  update_release_partition_info.py
octane/patches/astute/: deploy_actions.rb.patch  update.sh
octane/patches/fuel_agent/: patch
octane/patches/pman/: erase_node.rb.patch  pmanager.py.patch  update.sh  update_node.sh
octane/patches/puppet/: ceph_conf.patch  ceph_osd.rb  fix_mysql.patch  init.pp  osd.pp  revert.sh  update.sh
octane/patches/puppet/ceph/: patch
octane/pman/: manager.py.patch  mon.sh  pmanager.py  pmanager.py.patch  ubuntu_partition  ubuntu_partition_late  update.sh
octane/tests/: cirros_timeline.sh  clone_env.py  conftest.py  create_vms.sh  generate_test_nets.py  meta.txt  start_timeline.sh  test_app.py  test_apt.py  test_archivators.py  test_archivators_restore.py  test_archive.py  test_backup.py  test_base_collection_archivator.py  test_ceph.py  test_check.py  test_cleanup.py  test_compute_handlers.py  test_db.py  test_docker.py  test_enable_release.py  test_env.py  test_handlers.py  test_helpers.py  test_install_node.py  test_maintenance.py  test_network.py  test_octane.py  test_osd_upgrade.py  test_patch_active_img.py  test_patch_puppet.py  test_plugin.py  test_prepare.py  test_preupgrade_compute.py  test_restore.py  test_sync_images.py  test_sync_networks.py  test_test.py  test_transformations.py  test_update_plugin_settings.py  (+27 more)
octane/util/: __init__.py  apt.py  archivate.py  auth.py  ceph.py  cinder.py  cobbler.py  db.py  deployment.py  disk.py  docker.py  encryption.py  env.py  fuel.py  fuel_bootstrap.py  fuel_client.py  helpers.py  img.py  keystone.py  maintenance.py  mcollective.py  mongo.py  network.py  node.py  nova.py  patch.py  plugin.py  puppet.py  service.py  sql.py  ssh.py  subprocess.py  systemd.py  tempfile.py  tempfile_helpers.py
octane_fuelclient/: setup.py  tox.ini
octane_fuelclient/octaneclient/: commands.py
octane_fuelclient/tools/: push.sh
octane_nailgun/: .gitignore  Dockerfile  push.sh  setup.py  tox.ini
octane_nailgun/octane/: handlers.py  manager.py  urls.py  validators.py
octane_nailgun/tools/: bootstrap.sh  build.sh  push.sh  urls.py.patch
puppet/: init.pp  update.sh
specs/: nailgun-api-env-upgrade-extensions.rst  octane.spec  upgrade-major-openstack-environment.rst
(+72 files in other folders)
