[metadata]
name = octane
summary = Octane - upgrade your Fuel.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    octane

# NOTE(akscram): The extras section properly handled in pbr>=1.0.0 and
#                represents the extras_require parameter.
# [extras]
# zabbix =
#     pyzabbix==0.7.3

[entry_points]
console_scripts =
    octane = octane.app:main
octane =
    prepare = octane.commands.prepare:PrepareCommand
    revert-prepare = octane.commands.prepare:RevertCommand
    upgrade-env = octane.commands.upgrade_env:UpgradeEnvCommand
    upgrade-node = octane.commands.upgrade_node:UpgradeNodeCommand
    upgrade-db = octane.commands.upgrade_db:UpgradeDBCommand
    upgrade-ceph = octane.commands.upgrade_ceph:UpgradeCephCommand
    install-node = octane.commands.install_node:InstallNodeCommand
    upgrade-control = octane.commands.upgrade_controlplane:UpgradeControlPlaneCommand
    rollback-control = octane.commands.rollback_controlplane:RollbackControlPlaneCommand
    sync-networks = octane.commands.sync_networks:SyncNetworksCommand
    cleanup = octane.commands.cleanup:CleanupCommand
    sync-images = octane.commands.sync_images:SyncImagesCommand
    sync-images-prepare = octane.commands.sync_images:SyncImagesPrepareCommand
    update-plugin-settings = octane.commands.update_plugin_settings:UpdatePluginSettingsCommand [zabbix]
    fuel-backup = octane.commands.backup:BackupCommand
    fuel-restore = octane.commands.restore:RestoreCommand
    fuel-repo-backup = octane.commands.backup:BackupRepoCommand
    fuel-repo-restore = octane.commands.restore:RestoreRepoCommand
octane.handlers.upgrade =
    controller = octane.handlers.upgrade.controller:ControllerUpgrade
    compute = octane.handlers.upgrade.compute:ComputeUpgrade
    ceph-osd = octane.handlers.upgrade.ceph_osd:CephOsdUpgrade
    cinder = octane.handlers.upgrade.cinder:CinderUpgrade
fuelclient =
    env_clone = octane.fuelclient.clone_env:EnvClone
    env_move_node = octane.fuelclient.move_node:EnvMoveNode
    env_clone-ips = octane.fuelclient.clone_ips:CloneIPs
