[metadata]
name = octane
summary = Octane - upgrade your Fuel.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    octane

[entry_points]
console_scripts =
    octane = octane.app:main
octane =
    upgrade-env = octane.commands.upgrade_env:UpgradeEnvCommand
    upgrade-node = octane.commands.upgrade_node:UpgradeNodeCommand
    upgrade-db = octane.commands.upgrade_db:UpgradeDBCommand
    upgrade-ceph = octane.commands.upgrade_ceph:UpgradeCephCommand
    preupgrade-compute = octane.commands.preupgrade_compute:PreupgradeComputeCommand
    install-node = octane.commands.install_node:InstallNodeCommand
    upgrade-control = octane.commands.upgrade_controlplane:UpgradeControlPlaneCommand
    upgrade-osd = octane.commands.osd_upgrade:UpgradeOSDCommand
    rollback-control = octane.commands.rollback_controlplane:RollbackControlPlaneCommand
    fuel-backup = octane.commands.backup:BackupCommand
    fuel-restore = octane.commands.restore:RestoreCommand
    fuel-repo-backup = octane.commands.backup:BackupRepoCommand
    fuel-repo-restore = octane.commands.restore:RestoreRepoCommand
    update-bootstrap-centos = octane.commands.update_bootstrap:UpdateCentos
    enable-release = octane.commands.enable_release:EnableReleaseCommand
    patch-active-img = octane.commands.patch_active_image:PatchImgCommand
    cleanup = octane.commands.cleanup:CleanupCommand
    check = octane.commands.check:CheckCommand
octane.handlers.upgrade =
    controller = octane.handlers.upgrade.controller:ControllerUpgrade
    compute = octane.handlers.upgrade.compute:ComputeUpgrade
    ceph-osd = octane.handlers.upgrade.ceph_osd:CephOsdUpgrade
    cinder = octane.handlers.upgrade.cinder:CinderUpgrade
fuelclient =
    env_clone = octane.fuelclient.clone_env:EnvClone
    env_move_node = octane.fuelclient.move_node:EnvMoveNode
    env_copy_vips = octane.fuelclient.copy_vips:CopyVIPs
    release_clone = octane.fuelclient.clone_release:CreateUpgradeRelease
